# SlicerAstmPhantomTest

./: .gitignore  AnalyzePhantomJSON.m  CMakeLists.txt  License.txt  README.md
AstmPhantomTest/: AstmPhantomTest.py  CMakeLists.txt
AstmPhantomTest/AstmPhantomTestClasses/: Measurements.py  Phantom.py  Pointer.py  Targets.py  Utils.py  WorkingVolume.py  __init__.py
AstmPhantomTest/Resources/: pointerRAS.stl
AstmPhantomTest/Resources/UI/: AstmPhantomTest.ui
AstmPhantomTest/Resources/gt/: SN0001a.txt  SN0001b.txt  SN0001c.txt  SN0002a.txt  SN0002b.txt  SN0002c.txt  SN0003a.txt  SN0003b.txt  SN0003c.txt  SN0004a.txt  SN0004b.txt  SN0004c.txt  SN0005a.txt  SN0005b.txt  SN0005c.txt  phantom.txt
AstmPhantomTest/Resources/models/: ftk250_RAS.stl  ftk500_RAS.stl  simpPhantom_RAS.STL  simpPhantom_RAS.stl  stk180_RAS.stl  stk300_RAS.stl  vega_RAS.stl
AstmPhantomTest/Resources/ptr/: hip7.txt  navex.txt
AstmPhantomTest/Resources/wv/: FusionTrack250.txt  FusionTrack500.txt  PolarisVega.txt  PolarisVegaExt_ftk500Locs.txt  PolarisVegaExtend.txt  SpryTrack180.txt  SpryTrack300.txt
Atracsys/SlicerAstmPhantomTest/: README.md
Atracsys/SlicerAstmPhantomTest/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
Atracsys/SlicerAstmPhantomTest/ghrs-data/snapshots/: 2023-01-19_095807_top_paths_snapshot.csv  2023-01-19_095807_top_referrers_snapshot.csv  2023-01-19_095807_views_clones_series_fragment.csv  2023-01-19_230910_views_clones_series_fragment.csv  (+2497 more)
Atracsys/SlicerAstmPhantomTest/latest-report/: report.html  report.md  report_for_pdf.html
